--- a/codingEverybody(java script)/3.html
+++ b/codingEverybody(java script)/3.html
@@ -3,28 +3,46 @@
 <head>
 <title>WEB1-java script</title>
 <meta charset="utf-8">
+<script>
+function nightDayHandler(self){
+  var target=document.querySelector('body');
+  if(self.value==='night'){
+  target.style.backgroundColor='black';
+  target.style.color='white';
+  self.value='day';
+
+  var alist=document.querySelectorAll('a');
+  var i=0;
+  while(i<alist.length){
+    alist[i].style.color='powderblue';
+    i=i+1;
+  }
+  }
+  else{
+  target.style.backgroundColor='white';
+  target.style.color='black';
+  self.value='night';
+
+  var alist=document.querySelectorAll('a');
+  var i=0;
+  while(i<alist.length){
+    alist[i].style.color='blue';
+    i=i+1;
+     }
+    }
+  }
+</script>
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  
+
   <input type="button" value="night" onclick="
-  var target=document.querySelector('body');
-if(this.value==='night'){
-  target.style.backgroundColor='black';
-  target.style.color='white';
-  this.value='day';
-}
-else{
-  target.style.backgroundColor='white';
-  target.style.color='black';
-  this.value='night';
-}
+  nightDayHandler(this);
   ">
 <ol>
   <li><a href="1.html">HTML</a></li>
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
-  <li><a href="checkbox.html">checkbox</a></li>
 </ol>
 
 <h2>java script란 무엇인가?</h2>
