--- a/codingEverybody(java script)/3.html
+++ b/codingEverybody(java script)/3.html
@@ -45,7 +45,7 @@ function nightDayHandler(self){
   <li><a href="3.html">JavaScript</a></li>
 </ol>
 
-<h2>java script란 무엇인가?</h2>
+<h2>java script란 무엇인가요?</h2>
 <p>
   자바스크립트는 객체 기반의 스크립트 프로그래밍 언어이다. 이 언어는 웹 브라우저 내에서 주로 사용하며,
   다른 응용 프로그램의 내장 객체에도 접근할 수 있는 기능을 가지고 있다.
